<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/difficulty_settings_header">

        <ListPreference
            app:key="difficulty"
            app:title="@string/difficulty_title"
            app:entries="@array/difficulty_entries"
            app:entryValues="@array/difficulty_values"
            app:defaultValue="1.0"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sound_settings_header">

        <SwitchPreferenceCompat
            app:key="background_sound"
            app:title="@string/background_sound_title"
            app:summaryOn="@string/background_sound_summary_on"
            app:summaryOff="@string/background_sound_summary_off"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="combat_sound"
            app:title="@string/combat_sound_title"
            app:summaryOn="@string/combat_sound_summary_on"
            app:summaryOff="@string/combat_sound_summary_off"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_us_title">
        <Preference
            app:key="@string/privacy_policy_title"
            app:title="@string/privacy_policy_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

</PreferenceScreen>